--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "social-rating-bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "repository": "https://github.com/lFandoriNl/social-rating-bot.git",
   "author": "Maxim Koylo <lkoylol12@gmail.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "node --inspect=5858 -r ts-node/register ./src/index.ts",
+    "start:watch": "nodemon"
   },
   "dependencies": {
-    "nodemon": "^2.0.7"
+    "@types/node": "^14.14.37",
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.7",
+    "telegraf": "^4.3.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   }
 }
