--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/node": "^14.14.37",
     "dotenv": "^8.2.0",
+    "effector": "^21.8.11",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7",
     "telegraf": "^4.3.0",
