--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^14.14.37",
     "dotenv": "^8.2.0",
     "effector": "^21.8.11",
+    "effector-root": "^1.3.0",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7",
     "telegraf": "^4.3.0",
