--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/node": "^14.14.37",
+    "canvas": "^2.7.0",
     "dotenv": "^8.2.0",
     "effector": "^21.8.11",
     "effector-root": "^1.3.0",
