--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "effector": "^21.8.11",
     "effector-root": "^1.3.0",
     "mongoose": "^5.12.3",
+    "nanoid": "^3.1.22",
     "nodemon": "^2.0.7",
     "telegraf": "^4.3.0",
     "ts-node": "^9.1.1",
