--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "mongoose": "^5.12.3",
     "nanoid": "^3.1.22",
     "nodemon": "^2.0.7",
-    "rxjs": "^6.6.7",
-    "telegraf": "^4.3.0",
+    "rxjs": "^7.0.0",
+    "telegraf": "3.38.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
